--- a/res/layout/custom_list.xml
+++ b/res/layout/custom_list.xml
@@ -8,14 +8,14 @@
 		 android:layout_height="wrap_content"
 		 android:textColor="#111111"
 		 android:paddingTop="10dp"
-		 android:paddingBottom="10dp"
-		 android:paddingLeft="20dp"
+		 android:paddingBottom="13dp"
+		 android:paddingLeft="10dp"
 		 android:shadowDx="1"
 		 android:shadowDy="1"
 		 android:shadowRadius="1"
 		 android:shadowColor="#ffffff"
 		 android:textStyle="bold"
-		 android:textAppearance="?android:attr/textAppearanceMediumInverse"
+		 android:textAppearance="?android:attr/textAppearanceSmallInverse"
 		 android:background="@drawable/selector"
 		 android:id="@+id/no"
 	 />  
@@ -40,9 +40,8 @@
 		 android:layout_width="wrap_content"
 		 android:layout_height="wrap_content"
 		 android:textColor="#111111"
-		 android:paddingTop="5px"
-		 android:paddingBottom="5px"
-		 android:paddingRight="15dp"
+		 android:paddingBottom="2px"
+		 android:paddingRight="5px"
 		 android:shadowDx="1"
 		 android:shadowDy="1"
 		 android:shadowRadius="1"
