--- a/res/layout/form_schedule.xml
+++ b/res/layout/form_schedule.xml
@@ -129,6 +129,7 @@
 			android:shadowDx="1"
 			android:shadowDy="1"
 			android:shadowRadius="1"
+			android:gravity="top"
 			android:shadowColor="#ffffff"
 			android:text=""				
 		 />
